(March/14/2013)
	+Added 5 mods by MamiyaOtaru (Which are the following)
		+Added "VoxelMap (Zan's)"
		+Added "No Voidfog (or Dimming)"
		+Added "Old North / Retro Sun Direction"
		+Added "No Slimes in Superflat"
		+Added "Retro Fences"
	+Added "Forge"
	+Added "ChickenShed"
	+Added "Player API"
	+Added "Render Player API"